Alterando arquivo ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Garantir git origin para evitar erro 128
+        run: git remote set-url origin https://github.com/${{ github.repository }}.git
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
