Alterando arquivo ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,11 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Garantir git origin
-        run: git remote set-url origin https://github.com/${{ github.repository }}.git
+      # - name: Garantir git origin
+      #   run: git remote set-url origin https://github.com/${{ github.repository }}.git
 
-      - name: Listar arquivos para debug
-        run: ls -la
+      # - name: Listar arquivos para debug
+      #   run: ls -la
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -30,15 +30,30 @@ jobs:
           node-version: 18
           cache: 'yarn' # usa cache automático do Yarn
 
-      - name: Instalar dependências
-        run: yarn install
+      - name: Cache Cypress binary
+        uses: actions/cache@v4
+        with:
+            path: ~/.cache/Cypress
+            key: cypress-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+
+      - name: Build app
+        run: yarn build
         working-directory: ./web
+
+      - name: Start app
+        run: npx serve -s build &
+        working-directory: ./web
+
+      - name: Esperar app rodar
+        run: npx wait-on http://localhost:3000
+
+      # - name: Instalar dependências
+      #   run: yarn install
+      #   working-directory: ./web
 
       - name: Rodar Cypress
         run: |
           cd web
-          yarn start &
-          npx wait-on http://localhost:3000
           npx cypress run
         
       - name: Upload screenshots on failure
