--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,10 @@ jobs:
           node-version: 18
           cache: 'yarn' # usa cache automático do Yarn
 
+      - name: Instalar dependências
+        run: yarn install
+        working-directory: ./web
+
       - name: Cache Cypress binary
         uses: actions/cache@v4
         with:
@@ -46,10 +50,6 @@ jobs:
 
       - name: Esperar app rodar
         run: npx wait-on http://localhost:3000
-
-      # - name: Instalar dependências
-      #   run: yarn install
-      #   working-directory: ./web
 
       - name: Rodar Cypress
         run: |
