--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Instalar dependências
         run: yarn install
-        working-directory: ./web
+        working-directory: ./automacaoBauruServicos/web
 
       - name: Cache Cypress binary
         uses: actions/cache@v4
@@ -42,11 +42,11 @@ jobs:
 
       - name: Build app
         run: yarn build
-        working-directory: ./web
+        working-directory: ./automacaoBauruServicos/web
 
       - name: Start app
         run: npx serve -s build &
-        working-directory: ./web
+        working-directory: ./automacaoBauruServicos/web
 
       - name: Esperar app rodar
         run: npx wait-on http://localhost:3000
